--- a/.dockerignore
+++ b/.dockerignore
@@ -22,4 +22,29 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# IDE
 .vscode
+.idea
+*.swp
+*.swo
+
+# OS
+Thumbs.db
+
+# Git
+.git
+.gitignore
+
+# Docker
+Dockerfile*
+.dockerignore
+
+# Documentation
+README.md
+*.md
+
+# Screenshots
+/screenshots
+
+# GitHub
+.github
