--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -1,4 +1,4 @@
-name: Build Docker image and push to hub
+name: Build and Push Docker image to GHCR
 on:
   release:
     types:
@@ -6,28 +6,37 @@ on:
       - edited
 
 env:
-  DOCKER_IMAGE_NAME: typesense-dashboard
-  DOCKER_IMAGE_VERSION: ${{ github.ref_name }}
+  IMAGE_NAME: typesense-dashboard
+  REGISTRY: ghcr.io
+  IMAGE_VERSION: ${{ github.ref_name }}
+  IMAGE_REPO: ${{ github.repository }}
 
 jobs:
   docker:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
-      -
-        name: Set up QEMU
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      - 
-        name: Set up docker buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - 
-        name: Login to docker hub
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
+          context: .
           push: true
-          tags: amartyag/${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_IMAGE_VERSION }}
+          tags: |
+            ghcr.io/${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+            ghcr.io/${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:latest
+          labels: |
+            org.opencontainers.image.source=${{ github.repositoryUrl }}
