OKD/Openshift deployment: SCC, namespace, service account, GHCR, workflow, docs

--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: typesense-dashboard-config
-  namespace: typesense-dashboard
+  namespace: wordpress-help
   labels:
     app: typesense-dashboard
 data:
