--- a/k8s/namespace.yaml
+++ b/k8s/namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: typesense-dashboard
+  name: wordpress-help
   labels:
-    name: typesense-dashboard
+    name: wordpress-help
     app: typesense-dashboard 
